[tool.poetry]
name = "hass-vienna-smartmeter"
version = "0.1.0"
description = "Custom home assistant integration to add sensors for your Vienna Smart Meter energy meters."
authors = ["Platysma <platysma.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
vienna-smartmeter = {version = "^0.3.2", extras = ["async"]}


[tool.poetry.dev-dependencies]
homeassistant = "^2021.9.7"
flake8 = "^3.9.2"
reorder-python-imports = "^2.6.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
