[tool.poetry]
name = "hass-vienna-smartmeter"
version = "0.1.0"
description = "Custom home assistant integration to add sensors for your Vienna Smart Meter energy meters."
authors = ["Platysma <platysma.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
vienna-smartmeter = {version = "^0.3.2", extras = ["async"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
reorder-python-imports = "^2.6.0"
black = "^21.11b1"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-simplify = "^0.14.2"
flake8-use-fstring = "^1.1"
pre-commit = "^2.15.0"
pylint = "^2.12.2"
isort = "^5.10.1"
mypy = "^0.910"
codespell = "^2.1.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-homeassistant-custom-component = "^0.4.5"
homeassistant-stubs = {version = "^2021.9.7", allow-prereleases = true}
homeassistant = {version = "^2021.9.7", allow-prereleases = true}
pylint-pytest = "^1.1.2"

[tool.pylint.'MASTER']
load-plugins = "pylint_pytest"

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
